tweaks for fixing opcua

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2730,7 +2730,7 @@ filter {
       id => "dissect_zeek_opcua_binary_create_session_discovery"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][discovery_profile_link_id]}	%{[zeek_cols][resp_pdiscovery_profile_uri]}	%{[zeek_cols][resp_pdiscovery_profile_url]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][discovery_profile_link_id]}	%{[zeek_cols][discovery_profile_uri]}	%{[zeek_cols][discovery_profile_url]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2761,7 +2761,7 @@ filter {
       id => "dissect_zeek_opcua_binary_activate_session"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][opcua_link_id]}	%{[zeek_cols][client_algorithm]}	%{[zeek_cols][client_signature]}	%{[zeek_cols][client_software_cert_link_id]}	%{[zeek_cols][opcua_locale_link_id]}	%{[zeek_cols][ext_obj_type_id_encoding_mask]}	%{[zeek_cols][ext_obj_type_id_namespace_idx]}	%{[zeek_cols][ext_obj_type_id_numeric]}	%{[zeek_cols][ext_obj_type_id_string]}	%{[zeek_cols][ext_obj_type_id_guid]}	%{[zeek_cols][ext_obj_type_id_opaque]}	%{[zeek_cols][ext_obj_type_id_str]}	%{[zeek_cols][ext_obj_encoding]}	%{[zeek_cols][ext_obj_policy_id]}	%{[zeek_cols][ext_obj_user_name]}	%{[zeek_cols][ext_obj_password]}	%{[zeek_cols][ext_obj_encryption_algorithom]}	%{[zeek_cols][ext_obj_certificate_data]}	%{[zeek_cols][ext_obj_token_data]}	%{[zeek_cols][user_token_algorithm]}	%{[zeek_cols][user_token_signature]}	%{[zeek_cols][server_nonce]}	%{[zeek_cols][status_code_link_id]}	%{[zeek_cols][activate_session_diag_info_link_id]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][opcua_link_id]}	%{[zeek_cols][client_algorithm]}	%{[zeek_cols][client_signature]}	%{[zeek_cols][client_software_cert_link_id]}	%{[zeek_cols][locale_link_id]}	%{[zeek_cols][ext_obj_type_id_encoding_mask]}	%{[zeek_cols][ext_obj_type_id_namespace_idx]}	%{[zeek_cols][ext_obj_type_id_numeric]}	%{[zeek_cols][ext_obj_type_id_string]}	%{[zeek_cols][ext_obj_type_id_guid]}	%{[zeek_cols][ext_obj_type_id_opaque]}	%{[zeek_cols][ext_obj_type_id_str]}	%{[zeek_cols][ext_obj_encoding]}	%{[zeek_cols][ext_obj_policy_id]}	%{[zeek_cols][ext_obj_user_name]}	%{[zeek_cols][ext_obj_password]}	%{[zeek_cols][ext_obj_encryption_algorithom]}	%{[zeek_cols][ext_obj_certificate_data]}	%{[zeek_cols][ext_obj_token_data]}	%{[zeek_cols][user_token_algorithm]}	%{[zeek_cols][user_token_signature]}	%{[zeek_cols][server_nonce]}	%{[zeek_cols][status_code_link_id]}	%{[zeek_cols][activate_session_diag_info_link_id]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2773,7 +2773,7 @@ filter {
 
       ruby {
         id => "ruby_zip_zeek_opcua_binary_activate_session"
-        init => "$zeek_opcua_binary_activate_session_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'opcua_link_id', 'client_algorithm', 'client_signature', 'client_software_cert_link_id', 'opcua_locale_link_id', 'ext_obj_type_id_encoding_mask', 'ext_obj_type_id_namespace_idx', 'ext_obj_type_id_numeric', 'ext_obj_type_id_string', 'ext_obj_type_id_guid', 'ext_obj_type_id_opaque', 'ext_obj_type_id_str', 'ext_obj_encoding', 'ext_obj_policy_id', 'ext_obj_user_name', 'ext_obj_password', 'ext_obj_encryption_algorithom', 'ext_obj_certificate_data', 'ext_obj_token_data', 'user_token_algorithm', 'user_token_signature', 'server_nonce', 'status_code_link_id', 'activate_session_diag_info_link_id' ]"
+        init => "$zeek_opcua_binary_activate_session_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'opcua_link_id', 'client_algorithm', 'client_signature', 'client_software_cert_link_id', 'locale_link_id', 'ext_obj_type_id_encoding_mask', 'ext_obj_type_id_namespace_idx', 'ext_obj_type_id_numeric', 'ext_obj_type_id_string', 'ext_obj_type_id_guid', 'ext_obj_type_id_opaque', 'ext_obj_type_id_str', 'ext_obj_encoding', 'ext_obj_policy_id', 'ext_obj_user_name', 'ext_obj_password', 'ext_obj_encryption_algorithom', 'ext_obj_certificate_data', 'ext_obj_token_data', 'user_token_algorithm', 'user_token_signature', 'server_nonce', 'status_code_link_id', 'activate_session_diag_info_link_id' ]"
         code => "event.set('[zeek_cols]', $zeek_opcua_binary_activate_session_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -2823,7 +2823,7 @@ filter {
       id => "dissect_zeek_opcua_binary_activate_session_locale_id"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][opcua_locale_link_id]}	%{[zeek_cols][locale_id]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][locale_link_id]}	%{[zeek_cols][locale_id]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2835,7 +2835,7 @@ filter {
 
       ruby {
         id => "ruby_zip_zeek_opcua_binary_activate_session_locale_id"
-        init => "$zeek_opcua_binary_activate_session_locale_id_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'opcua_locale_link_id', 'locale_id' ]"
+        init => "$zeek_opcua_binary_activate_session_locale_id_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'locale_link_id', 'locale_id' ]"
         code => "event.set('[zeek_cols]', $zeek_opcua_binary_activate_session_locale_id_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -5573,7 +5573,7 @@ filter {
       rename => { "[zeek][opcua_binary_activate_session][activate_session_diag_info_link_id]" => "[zeek][opcua_binary_activate_session_diagnostic_info][activate_session_diag_info_link_id]" }
       rename => { "[zeek][opcua_binary_activate_session][client_software_cert_link_id]" => "[zeek][opcua_binary_activate_session_client_software_cert][client_software_cert_link_id]" }
       rename => { "[zeek][opcua_binary_activate_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-      rename => { "[zeek][opcua_binary_activate_session][opcua_locale_link_id]" => "[zeek][opcua_binary_activate_session_locale_id][opcua_locale_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][locale_link_id]" => "[zeek][opcua_binary_activate_session_locale_id][locale_link_id]" }
       rename => { "[zeek][opcua_binary_activate_session][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
       rename => { "[zeek][opcua_binary_activate_session_diagnostic_info][diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
       rename => { "[zeek][opcua_binary_browse][browse_description_link_id]" => "[zeek][opcua_binary_browse_description][browse_description_link_id]" }
