set boot grub permission at the end of preseed

--- a/sensor-iso/config/includes.binary/install/preseed_base.cfg
+++ b/sensor-iso/config/includes.binary/install/preseed_base.cfg
@@ -61,4 +61,5 @@ d-i preseed/late_command string \
   in-target sed -i 's#^\(GRUB_DISTRIBUTOR=\).*$#\1"Hedgehog"#' /etc/default/grub; \
   in-target cp /usr/share/images/desktop-base/hedgehog-wallpaper-plain.png /boot/grub; \
   in-target bash /usr/local/bin/preseed_late_user_config.sh; \
-  in-target grub-mkconfig -o /boot/grub/grub.cfg;
+  in-target grub-mkconfig -o /boot/grub/grub.cfg; \
+  in-target chmod 400 /boot/grub/grub.cfg;
