--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -49,4 +49,5 @@ d-i preseed/late_command string \
   in-target sed -i 's#^\(GRUB_DISTRIBUTOR=\).*$#\1"Hedgehog"#' /etc/default/grub; \
   in-target cp /usr/share/images/desktop-base/Malcolm_background.png /boot/grub; \
   in-target bash /usr/local/bin/preseed_late_user_config.sh; \
-  in-target grub-mkconfig -o /boot/grub/grub.cfg;
+  in-target grub-mkconfig -o /boot/grub/grub.cfg; \
+  in-target chmod 400 /boot/grub/grub.cfg;
