--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,10 @@ http {
     server name-map-ui:8080;
   }
 
+  upstream netbox {
+    server netbox:8080;
+  }
+
   upstream extracted-file-http-server {
     server file-monitor:8440;
   }
@@ -202,6 +206,17 @@ http {
       proxy_pass http://extracted-file-http-server$1;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
+    }
+
+    # netbox
+    location /assets {
+      proxy_pass http://netbox;
+      proxy_redirect off;
+      proxy_set_header Host netbox.malcolm.local;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Remote-Auth $authenticated_user;
     }
 
     # favicon, logos, banners, etc.
