--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -943,7 +943,10 @@ services:
       retries: 3
       start_period: 60s
   netbox:
-    image: ghcr.io/mmguero/netbox:latest
+    image: malcolmnetsec/netbox:6.4.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/netbox.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -971,7 +974,10 @@ services:
       retries: 3
       start_period: 120s
   netbox-postgres:
-    image: ghcr.io/mmguero/postgres:14-alpine
+    image: malcolmnetsec/postgresql:6.4.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/postgresql.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -991,7 +997,10 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis:
-    image: ghcr.io/mmguero/redis:7-alpine
+    image: malcolmnetsec/redis:6.4.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/redis.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
@@ -1015,7 +1024,10 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis-cache:
-    image: ghcr.io/mmguero/redis:7-alpine
+    image: malcolmnetsec/redis:6.4.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/redis.Dockerfile
     restart: "no"
     stdin_open: false
     tty: true
