--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -58,3 +58,7 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stdout_logfile_backups=0
 redirect_stderr=true
+
+
+[include]
+files = /etc/supervisor.d/*.conf
