--- a/netbox/env/netbox.env.example
+++ b/netbox/env/netbox.env.example
@@ -47,6 +47,7 @@ REDIS_PASSWORD=xxxxxxxxxxxxxxxx
 REDIS_SSL=false
 RELEASE_CHECK_URL=https://api.github.com/repos/netbox-community/netbox/releases
 SECRET_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SKIP_STARTUP_SCRIPTS=true
 SKIP_SUPERUSER=false
 SUPERUSER_API_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 SUPERUSER_EMAIL=admin@example.com
