--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ x-process-variables: &process-variables
   # docker containers will run processes as unprivileged user with UID:GID
   PUID : 1000
   PGID : 1000
+  # for debugging container init via tini (https://github.com/krallin/tini)
+  TINI_VERBOSITY : 1
 
 x-auth-variables: &auth-variables
   # authentication method: encrypted HTTP basic authentication ('true') vs LDAP ('false')
@@ -259,6 +261,11 @@ x-filebeat-variables: &filebeat-variables
   FILEBEAT_TCP_PARSE_DROP_FIELD : ''
   # Tag to append to events sent to the filebeat TCP input listener
   FILEBEAT_TCP_TAG : '_malcolm_beats'
+
+x-netbox-variables: &netbox-variables
+  # Parameters related to NetBox (and supporting tools). Note that other more specific parameters
+  #   can also be configured in the env_file files for netbox* services
+  NETBOX_DISABLED : 'true'
 
 x-common-upload-variables: &common-upload-variables
   # Whether or not to automatically apply tags based (on the PCAP filename) to network traffic metadata
@@ -956,17 +963,20 @@ services:
     env_file: ./netbox/env/netbox.env
     environment:
       << : *process-variables
+      << : *ssl-variables
+      << : *netbox-variables
       VIRTUAL_HOST : 'netbox.malcolm.local'
     depends_on:
-    - netbox-postgres
-    - netbox-redis
-    - netbox-redis-cache
+      - netbox-postgres
+      - netbox-redis
+      - netbox-redis-cache
     volumes:
-    - ./netbox/config/configuration:/etc/netbox/config:ro
-    - ./netbox/config/reports:/etc/netbox/reports:ro
-    - ./netbox/config/scripts:/etc/netbox/scripts:ro
-    - ./netbox/config/unit:/etc/unit:ro
-    - ./netbox/media:/opt/netbox/netbox/media:rw
+      - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./netbox/config/configuration:/etc/netbox/config:ro
+      - ./netbox/config/reports:/etc/netbox/reports:ro
+      - ./netbox/config/scripts:/etc/netbox/scripts:ro
+      - ./netbox/config/unit:/etc/unit:ro
+      - ./netbox/media:/opt/netbox/netbox/media:rw
     healthcheck:
       test: ["CMD", "curl", "--silent", "http://localhost:8080/assets/api/" ]
       interval: 60s
@@ -987,9 +997,12 @@ services:
     env_file: ./netbox/env/postgres.env
     environment:
       << : *process-variables
+      << : *ssl-variables
+      << : *netbox-variables
       VIRTUAL_HOST : 'netbox-postgres.malcolm.local'
     volumes:
-    - ./netbox/postgres:/var/lib/postgresql/data:rw
+      - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./netbox/postgres:/var/lib/postgresql/data:rw
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
       interval: 60s
@@ -1010,13 +1023,16 @@ services:
     env_file: ./netbox/env/redis.env
     environment:
       << : *process-variables
+      << : *ssl-variables
+      << : *netbox-variables
       VIRTUAL_HOST : 'netbox-redis.malcolm.local'
     command:
-    - sh
-    - -c
-    - redis-server --appendonly yes --requirepass $$REDIS_PASSWORD
+      - sh
+      - -c
+      - redis-server --appendonly yes --requirepass $$REDIS_PASSWORD
     volumes:
-    - ./netbox/redis:/data
+      - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./netbox/redis:/data
     healthcheck:
       test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
       interval: 60s
@@ -1037,11 +1053,15 @@ services:
     env_file: ./netbox/env/redis-cache.env
     environment:
       << : *process-variables
+      << : *ssl-variables
+      << : *netbox-variables
       VIRTUAL_HOST : 'netbox-redis-cache.malcolm.local'
     command:
-    - sh
-    - -c
-    - redis-server --requirepass $$REDIS_PASSWORD
+      - sh
+      - -c
+      - redis-server --requirepass $$REDIS_PASSWORD
+    volumes:
+      - ./nginx/ca-trust:/var/local/ca-trust:ro
     healthcheck:
       test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
       interval: 60s
