initialize netbox on startup

--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -15,7 +15,7 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///dev/shm/supervisor.sock
 
 [group:netbox]
-programs=main,worker,housekeeping
+programs=main,worker,housekeeping,initialization
 
 [program:main]
 command=/opt/netbox/launch-netbox.sh
@@ -23,6 +23,23 @@ autostart=true
 autorestart=true
 startsecs=180
 stopwaitsecs=30
+startretries=0
+stopasgroup=true
+killasgroup=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stdout_logfile_backups=0
+redirect_stderr=true
+
+[program:initialization]
+command=/usr/bin/python3 /usr/local/bin/netbox_init.py
+  --wait
+  --url "http://localhost:8080/assets"
+  --token "%(ENV_SUPERUSER_API_TOKEN)s"
+  --site "%(ENV_NETBOX_DEFAULT_SITE)s"
+autostart=true
+autorestart=false
+startsecs=0
 startretries=0
 stopasgroup=true
 killasgroup=true
@@ -58,6 +75,3 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stdout_logfile_backups=0
 redirect_stderr=true
-
-[include]
-files = /etc/supervisor.d/*.conf
