--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -265,6 +265,7 @@ x-filebeat-variables: &filebeat-variables
 x-netbox-variables: &netbox-variables
   # Parameters related to NetBox (and supporting tools). Note that other more specific parameters
   #   can also be configured in the env_file files for netbox* services
+  NETBOX_DEFAULT_SITE : 'Malcolm'
   NETBOX_DISABLED : &netboxdisabled 'true'
   NETBOX_POSTGRES_DISABLED : *netboxdisabled
   NETBOX_REDIS_DISABLED : *netboxdisabled
