--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -1,3 +1,5 @@
+; Copyright (c) 2022 Battelle Energy Alliance, LLC.  All rights reserved.
+
 [unix_http_server]
 file=/dev/shm/supervisor.sock
 chmod=0700
@@ -73,4 +75,14 @@ killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stdout_logfile_backups=0
+redirect_stderr=true
+
+[program:cron]
+command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
+autostart=%(ENV_NETBOX_CRON)s
+autorestart=true
+stopasgroup=true
+killasgroup=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
 redirect_stderr=true
