--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-netbox.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-netbox.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
-Name=Malcolm - CyberChef
-Exec=/opt/firefox/firefox https://localhost/cyberchef.html
+Name=Malcolm - NetBox
+Exec=/opt/firefox/firefox https://localhost/assets/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Icon=applications-science.png
+Icon=network-workgroup.png
 Categories=Network;
 StartupWMClass=Firefox
 StartupNotify=true
