Using /assets/ for netbox conflicts with Arkime's /assets/, so use /netbox/ for the NetBox path

--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-17/16637019741.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-17/16637019741.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - NetBox
-Exec=/opt/firefox/firefox https://localhost/assets/
+Exec=/opt/firefox/firefox https://localhost/netbox/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
