--- a/netbox/env/netbox.env.example
+++ b/netbox/env/netbox.env.example
@@ -1,6 +1,6 @@
 CORS_ORIGIN_ALLOW_ALL=True
 CSRF_TRUSTED_ORIGINS=http://* https://*
-BASE_PATH=assets
+BASE_PATH=netbox
 REMOTE_AUTH_ENABLED=True
 REMOTE_AUTH_BACKEND=netbox.authentication.RemoteUserBackend
 REMOTE_AUTH_HEADER=HTTP_X_REMOTE_AUTH
