--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -36,7 +36,7 @@ redirect_stderr=true
 [program:initialization]
 command=/usr/bin/python3 /usr/local/bin/netbox_init.py
   --wait
-  --url "http://localhost:8080/assets"
+  --url "http://localhost:8080/netbox"
   --token "%(ENV_SUPERUSER_API_TOKEN)s"
 autostart=true
 autorestart=false
