--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -209,7 +209,7 @@ http {
     }
 
     # netbox
-    location /assets {
+    location /netbox {
       proxy_pass http://netbox;
       proxy_redirect off;
       proxy_set_header Host netbox.malcolm.local;
