--- a/.dockerignore
+++ b/.dockerignore
@@ -17,6 +17,7 @@
 .tmp
 docker-compose*yml
 Dockerfiles
+Gemfile.lock
 opensearch
 opensearch-backup
 arkime-logs
@@ -26,6 +27,7 @@ pcap
 scripts
 !scripts/malcolm_common.py
 zeek-logs
+_site
 suricata-logs
 netbox/netbox/media
 netbox/netbox/postgres
