more work on development of documentation to split out into github pages

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,10 +37,6 @@ http {
     server api:5000;
   }
 
-  upstream malcolm-readme {
-    server arkime:8000;
-  }
-
   upstream upload {
     server upload:80;
   }
@@ -89,7 +85,7 @@ http {
     }
   }
 
-  # Arkime interface
+  # Main web interface
   server {
     listen 443;
     include /etc/nginx/nginx_ssl_config.conf;
@@ -99,9 +95,7 @@ http {
 
     # Malcolm readme
     location /readme {
-      proxy_pass http://malcolm-readme/README.html;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
+      root /usr/share/nginx/html;
     }
 
     # Malcolm file upload
