--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ exclude:
   - dashboards
   - docker-compose-standalone.yml
   - docker-compose.yml
+  - docs/images/hedgehog/logo/font
+  - docs/images/font
   - docs/quick-start
   - docs/slides
   - docs/stix
