more work on development of documentation to split out into github pages

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -96,6 +96,7 @@ http {
     # Malcolm readme
     location /readme {
       root /usr/share/nginx/html;
+      try_files $uri $uri/index.html;
     }
 
     # Malcolm file upload
@@ -231,12 +232,14 @@ http {
       proxy_set_header Authorization "";
     }
 
+    # Malcolm API
     location /mapi {
       proxy_pass http://api/;
       proxy_redirect off;
       proxy_set_header Host api.malcolm.local;
     }
 
+    # Arkime
     location / {
       proxy_pass http://arkime;
       proxy_redirect off;
