more work on development of documentation to split out into github pages

--- a/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-20/16343116973.desktop
+++ b/malcolm-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-20/16343116973.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - README
-Exec=/opt/firefox/firefox https://localhost/readme
+Exec=/opt/firefox/firefox https://localhost/readme/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
