Tweaks to building documentation

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -16,6 +16,7 @@ export ARKIME_PACKET_ACL=
 export ARKIME_ECS_PROVIDER=arkime
 export ARKIME_ECS_DATASET=session
 
+export DOCUMENTATION_PORT=8420
 export MISCBEAT_PORT=9516
 export FLUENTBIT_METRICS_INTERVAL=30
 export FLUENTBIT_THERMAL_INTERVAL=10
