workflow changes for nginx for docs

--- a/.github/workflows/nginx-build-and-push-ghcr.yml
+++ b/.github/workflows/nginx-build-and-push-ghcr.yml
@@ -10,6 +10,12 @@ on:
       - 'Dockerfiles/nginx.Dockerfile'
       - 'shared/bin/*'
       - '.trigger_workflow_build'
+      - '_config.yml'
+      - '_includes/**'
+      - '_layouts/**'
+      - 'docs/**'
+      - 'Gemfile'
+      - 'README.md'
   workflow_dispatch:
   repository_dispatch:
 
